# pi0

./: .eslintrc.json  .prettierignore  .prettierrc  LICENSE  README.md  forge.config.ts  package-lock.json  package.json  tsconfig.json  webpack.main.config.ts
human/: plan.md
native/: .gitignore  Cargo.toml  package-lock.json  package.json
native/src/: app_monitor.rs  callbacks.rs  capture.rs  clock.rs  context_store.rs  db.rs  engine.rs  keymap.rs  lib.rs  ocr.rs  paths.rs  state.rs  writer.rs
src/: arco-compat.ts  global.d.ts  index.css  index.html  index.ts  panel.css  panel.tsx  preload.ts  renderer.tsx
src/app/: App.tsx  DataViewer.tsx  FloatPanel.tsx  PasswordGate.tsx  PermissionGuard.tsx  PermissionsPanel.tsx  SettingsView.tsx  theme.ts
src/main/: llm.ts  settings.ts  trayIcon.ts
src/main/mcp/: auth.ts  guidance.ts  server.ts
src/shared/: ipc.ts  schemas.ts
