[package]
name = "pi0-native"
version = "1.1.0"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2", default-features = false, features = ["napi8"] }
napi-derive = "2"
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
# The IANA timezone name (e.g. "Asia/Shanghai") stamped on every record — chrono
# only exposes the numeric offset, not the zone name we need for cross-timezone
# correctness. Already in the tree via chrono; declared here to use it directly.
iana-time-zone = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
arc-swap = "1"

# Encrypted, on-device store. SQLCipher (bundled) gives a password-protected
# SQLite DB with WAL; OpenSSL is vendored so the addon is self-contained.
rusqlite = { version = "0.32", features = ["bundled-sqlcipher-vendored-openssl"] }

# macOS system frameworks (mirrors ../native-key-logger, extended for pi0).
objc2 = "0.6"
objc2-foundation = "0.3"
objc2-app-kit = "0.3"
objc2-core-foundation = { version = "0.3", features = [
    "CFRunLoop",
    "CFDictionary",
    "CFString",
    "CFNumber",
    "CFArray",
] }
objc2-io-kit = { version = "0.3", features = ["hid", "hidsystem"] }
objc2-core-graphics = { version = "0.3", features = ["CGImage", "CGDirectDisplay"] }
objc2-screen-capture-kit = "0.3"
block2 = "0.6"

# PNG encoding for screenshots.
image = { version = "0.25", default-features = false, features = ["png"] }
dispatch2 = "0.3"
ocr-rs = "2.3"

[build-dependencies]
napi-build = "2"

[profile.release]
opt-level = 3
